syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Mareen.gRPC";

package hotel;

service hotel
{
	rpc CreateAsync(HotelCreationRequest) returns (HotelCreationResponse);
	rpc UpdateAsync(HotelUpdateRequest) returns (HotelUpdateResponse);
	rpc DeleteAsync(HotelDeleteRequest) returns (HotelDeleteResponse);
	rpc GetByIdAsync(HotelGetRequest) returns (HotelGetResponse);
	rpc GetAllAsync(HotelGetAllRequest) returns (HotelGetAllResponse);
	rpc GetAllRoomsAsync(HotelGetAllRoomsRequest) returns (HotelGetAllRoomsResponse);
	rpc GetAllEmployeesAsync(HotelGetAllEmployeesRequest) returns (HotelGetAllEmployeesResponse);
}

message HotelCreationRequest
{
	string hotelName = 1;
	int32 rating = 2;
	string address = 3;
	string city = 4;
	string state = 5;
	string postalCode = 6;
	string country = 7;
	string phoneNumber = 8;
	string email = 9;
	string website = 10;
	int32 capacity = 11;
	string description = 12;
}

message HotelCreationResponse
{
	int64 id = 1;
	string hotelName = 2;
	int32 rating = 3;
	string address = 4;
	string city = 5;
	string state = 6;
	string postalCode = 7;
	string country = 8;
	string phoneNumber = 9;
	string email = 10;
	string website = 11;
	int32 capacity = 12;
	string description = 13;
}

message HotelUpdateRequest
{
	int64 id = 1;
	string hotelName = 2;
	int32 rating = 3;
	string address = 4;
	string city = 5;
	string state = 6;
	string postalCode = 7;
	string country = 8;
	string phoneNumber = 9;
	string email = 10;
	string website = 11;
	int32 capacity = 12;
	string description = 13;
}

message HotelUpdateResponse
{
	int64 id = 1;
	string hotelName = 2;
	int32 rating = 3;
	string address = 4;
	string city = 5;
	string state = 6;
	string postalCode = 7;
	string country = 8;
	string phoneNumber = 9;
	string email = 10;
	string website = 11;
	int32 capacity = 12;
	string description = 13;
}

message HotelDeleteRequest
{
	int64 id = 1;
}

message HotelDeleteResponse
{
	bool isDelete = 1;
}

message HotelGetRequest
{
	int64 id = 1;
}

message HotelGetResponse
{
	int64 id = 1;
	string hotelName = 2;
	int32 rating = 3;
	string address = 4;
	string city = 5;
	string state = 6;
	string postalCode = 7;
	string country = 8;
	string phoneNumber = 9;
	string email = 10;
	string website = 11;
	int32 capacity = 12;
	string description = 13;
}

message HotelGetAllRequest
{

}

message HotelGetAllResponse
{
	repeated HotelGetResponse sth = 1;
}

message HotelGetAllRoomsRequest
{
	int64 id = 1;
}

message HotelGetRoomResponse
{
	int64 id = 1;
	int64 hotelId = 2;
	int32 roomNumber = 3;
	int32 roomType = 4;
	double price = 5;
	string description = 6;
	bool isFree = 7;
}

message HotelGetAllRoomsResponse
{
	repeated HotelGetRoomResponse sth = 1;
}

message HotelGetAllEmployeesRequest
{
	int64 id = 1;
}

message HotelGetEmployeeResponse
{
	int64 id = 1;
	string firstName = 2;
	string lastName = 3;
	google.protobuf.Timestamp dateOfBirth = 4;
	string email = 5;
	string phoneNumber = 6;
	string password = 7;
	int32 userRole = 8;
	int64 hotelId = 9;
}

message HotelGetAllEmployeesResponse
{
	repeated HotelGetEmployeeResponse sth = 1;
}